--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
-node_modules
 dist
+node_modules
+storybook-static
 coverage
+*.cache
+tsconfig.tsbuildinfo
+.idea
+
+# Logs
+logs
+*.log
+npm-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Coverage
+coverage
+
+# Optional eslint cache
+.eslintcache
