--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "storybook": "start-storybook -p 6005",
     "storybook:clean": "rimraf node_modules/.cache/storybook",
     "test": "jest",
-    "lint": "eslint --ext .js,.ts,.tsx src --ignore-pattern node_modules/"
+    "lint": "eslint --ext .js,.ts,.tsx src --ignore-pattern node_modules/",
+    "check-types": "tsc --noEmit --pretty",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
@@ -66,8 +70,10 @@
     "eslint-plugin-simple-import-sort": "^9.0.0",
     "eslint-plugin-testing-library": "^5.9.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "lint-staged": "^13.1.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "react": "^18.2.0",
